# password_manager

./: .env  .gitignore  Cargo.toml  README.md
migrations/2023-09-28-155642_accounts/: up.sql
src/: cli.rs  db.rs  main.rs  models.rs  operations.rs  schema.rs  structs.rs
