[package]
name = "chinxeleer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.5", features = ["cargo", "derive"] }
diesel = { version = "2.1.2", features = ["chrono", "postgres"] }
dotenv = "0.15.0"
